--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -445,6 +445,7 @@ a {
   background-color: white;
   width: 100%;
   max-width: 800px;
+  max-height: 455px;
   margin: 0 auto;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -595,7 +596,7 @@ a {
   border-radius: 5px;
   font-size: 1rem;
   font-weight: 600;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   background-color: #f0f0f0;
   color: #353535;
 }
