updating resume page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -619,3 +619,11 @@ a {
   box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.15);
   cursor: pointer;
 }
+
+/***** Resume *****/
+
+.resume-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
